Added ze to build system.

--- a/opencl/clprof.c.erb
+++ b/opencl/clprof.c.erb
@@ -1,4 +1,4 @@
-#include "clprof.h"
+#include "babeltrace_cl.h"
 <% if $sink_type == 'production' %>
 #include "clprof_callbacks.h"
 const bt_value *display_mode;
