--- a/opencl/clprof_callbacks.cpp.erb
+++ b/opencl/clprof_callbacks.cpp.erb
@@ -66,7 +66,8 @@ static void clprof_<%= dbt_event.name %>_callback(
                             /                               
   %>
 
-  <%if ( dbt_event.name.include?("clEnqueue") or dbt_event.name.include?("Alloc") ) and dbt_event.fields.key?("size") %>
+  <%# To do handle Alloc and cl_mem_host_ptr %>
+  <%if dbt_event.name.include?("clEnqueue") and dbt_event.fields.key?("size") %>
     memory_trafic[hpt_function_name_t(hostname,process_id, thread_id, "<%= dbt_event.name_striped %>")].delta(size);
   <% end %>
 
